@@ -1,7 +1,14 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
-  02 Apr 2002; Geert Bevub <gbevin@gentoo.org> emerge: 
+*portage-1.8.11 (02 Apr 2002)
+
+  02 Apr 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: important fixes
+  for movefile() -- ownership now preserved across filesystems, mv -f fallback
+  for special files, other optimizations and robustness improvements.  Important
+  fixes all-round.
+
+  02 Apr 2002; Geert Bevin <gbevin@gentoo.org> emerge: 
   fixed bad indentation of a part of the code that made unmerging multiple
   packages behave badly
 
